--- a/index.html
+++ b/index.html
@@ -282,6 +282,26 @@
             </section>
             <a href='#' class="more_btn see_solutions_btn">See all of our solutions</a>
         </div>
+
+
+        <div class="mobile_offerings_cls">
+            <section class="mobile_what_can_we_do">
+
+                    <h3> WHAT CAN WE DO FOR YOU? </h3>
+                        <ul class="icons_cls">
+                            <li><a href='#'><div class="business_stimu"></div>Business Stimulating Analytics</a></li>
+                            <li><a href='#'><div class="digital">Digital Customer Experience</a></li>
+                            <li><a href='#'><div class="smart_mone">Smart Monetization</a></li>
+                            </ul>
+                        <ul class="icons_cls">
+                            <li><a href='#'><div class="optimization">Optimization and Efficiency</a></li>
+                            <li><a href='#'><div class="personalized">Personalized Choice &amp; Control</a></li>
+                            <li><a href='#'><div class="business_trans">Business Transformation</a></li>
+                        </ul>
+                        
+            </section>
+            <a href='#' class="more_btn see_solutions_btn">See all of our solutions</a>
+        </div>
 <!-- -------------------------------- Happenings --------------------------- -->
 <!-- -------------------------------- Happenings --------------------------- -->
 
