--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <ul>
                         <li>
                             <a href="">YOUR NEEDS</a>
-                                <ul class="nav_cls_internal">
+       <!--                          <ul class="nav_cls_internal">
                                     <li><a href="#">Smart Monetization</a></li>
                                     <li><a href="#">Digital Customer Experience</a></li>
                                     <li><a href="#">Personalized Choice &amp; Control</a></li>
@@ -46,10 +46,10 @@
                                     <li><a href="#">Bussiness Stimulating Analytics</a></li>
                                     <li><a href="#">Customer Evolution</a></li>
                                 </ul> 
-                        </li>
+ -->                        </li>
                         <li>
                             <a href="">OUR PORTFOLIO</a>
-                                <ul class="nav_cls_internal">
+                <!--                 <ul class="nav_cls_internal">
                                     <li><a href="#">BSS - Bussiness Support Systems</a></li>
                                     <li><a href="#">Converged BSS</a></li>
                                     <li><a href="#">Active Customer Management</a></li>
@@ -70,11 +70,11 @@
                                     <li><a href="#">Services</a></li>
                                     <li><a href="#">Managed Services</a></li>
                                     <li><a href="#">Learning &amp; Certification Services</a></li>
-                                </ul>
+                                </ul> -->
                         </li>
                         <li>
                             <a href="">NEWS &amp; MEDIA</a>
-                                <ul class="nav_cls_internal">
+                       <!--          <ul class="nav_cls_internal">
                                     <li><a href="#">Press Releases</a></li>
                                     <li><a href="#">Events</a></li>
                                     <li><a href="#">In the News</a></li>
@@ -83,11 +83,11 @@
                                     <li><a href="#">Multimedia &amp; Webinars</a></li>
                                     <li><a href="#">Newsletter</a></li>
                                     <li><a href="#">Articales and Papers</a></li>
-                                </ul>
+                                </ul> -->
                         </li>
                         <li>
                             <a href="">ABOUT COMVERSE</a>
-                                <ul class="nav_cls_internal">
+            <!--                     <ul class="nav_cls_internal">
                                     <li><a href="#">Overview</a></li>
                                     <li><a href="#">Management</a></li>
                                     <li><a href="#">Investors</a></li>
@@ -97,7 +97,7 @@
                                     <li><a href="#">Customers</a></li>
                                     <li><a href="#">Value &amp; Corporate Responsibility</a></li>
                                     <li><a href="#">Industry Involvement</a></li>
-                                </ul>
+                                </ul> -->
                         </li>
                     </ul>
                     <label for="mobile_search_form" class="search_btn_mobile search_moblie"></label>
