--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
     							<li class="boxes_cls pink_box">	
     								<a href="#">
                                         <h2>Digital Lifestyle by Comverse</h2>
-                                        <b href="#">
+                                        <!-- <b href="#"> -->
                                         <img src="img/link-icon-image.png" alt="ReadMore">
                                         Read more
-                                        </b>
+                                        <!-- </b> -->
                                     </a>
 
     							</li>
