--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 								<li class="boxes_cls orange_box">
     								<a href="#">
                                         <h2>Meet Us at Managed Services World Congress 2014</h2>
-                                        <b href="#">
+                                        <b href="#" class="boxes_info">
                                         <img src="img/link-icon-image.png" alt="MoreInfo">
                                         Click for More Info
                                         </b>
@@ -241,7 +241,7 @@
     							<li class="boxes_cls pink_box">	
     								<a href="#">
                                         <h2>Digital Lifestyle by Comverse</h2>
-                                        <b href="#">
+                                        <b href="#" class="boxes_info">
                                         <img src="img/link-icon-image.png" alt="ReadMore">
                                         Read more
                                         </b>
@@ -251,7 +251,7 @@
     							<li class="boxes_cls green_box">
     								<a href="#">
                                         <h2>Smart Evolution One Goal, Many Paths</h2>
-                                        <b href="#">
+                                        <b href="#" class="boxes_info">
                                             <img src="img/link-icon-image.png" alt="SeeHow">
                                         See How
                                         </b>
